--- a/CS/PieChartGetStarted/PieChartGetStarted.csproj
+++ b/CS/PieChartGetStarted/PieChartGetStarted.csproj
@@ -33,16 +33,8 @@
 		<MauiFont Include="Resources\Fonts\*" />
 	</ItemGroup>
 
-	<ItemGroup Condition="'$(TargetFramework)' == 'net6.0-ios'">
-	  <PackageReference Include="DevExpress.Maui.Charts">
-	    <Version>21.2.1-pre-21217</Version>
-	  </PackageReference>
-	</ItemGroup>
-
-	<ItemGroup Condition="'$(TargetFramework)' == 'net6.0-android'">
-	  <PackageReference Include="DevExpress.Maui.Charts">
-	    <Version>21.2.1-pre-21217</Version>
-	  </PackageReference>
+	<ItemGroup>
+	  <PackageReference Include="DevExpress.Maui.Charts" Version="21.2.1-pre-21231" />
 	</ItemGroup>
 
 	<PropertyGroup>
